--- a/showmefinal/showme/public/index.html
+++ b/showmefinal/showme/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css">
+ 
     <title>React App</title>
   </head>
   <body>
