--- a/showme5/public/index.html
+++ b/showme5/public/index.html
@@ -12,7 +12,7 @@
     <style src="./css/index.css" rel="stylesheet"></style>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <title>ShowMe</title>
   </head>
   <body>
     <div id="root"></div>
